--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "micromark-extension-wiki-link",
   "version": "0.0.4",
   "description": "Parse and render wiki-style links",
+  "type": "module",
   "keywords": [
     "remark",
     "remark-plugin",
@@ -25,10 +26,11 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "lint": "eslint src/",
+    "lint": "npx eslint 'src/**/*.{ts,tsx,cjs,mjs,js,jsx}'",
     "prepare": "npm run build",
     "pretest": "npm run build",
-    "test": "npm run lint && mocha --require @babel/register test/micromark_test.js"
+    "test": "npm run lint && mocha --require @babel/register test/micromark_test.js",
+    "prettier": "npx prettier --write ./{src,test}"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -37,14 +39,12 @@
     "@babel/register": "^7.12.1",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.1.0",
-    "eslint": "^7.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mocha": "^10.4.3",
     "micromark": "^2.10.1",
     "mocha": "^8.2.0",
+    "prettier": "^3.2.5",
     "rollup": "^2.32.0"
   },
   "dependencies": {
