--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "test"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "webpack",
     "lint": "npx eslint 'src/**/*.{ts,tsx,cjs,mjs,js,jsx}'",
     "test": "npm run lint && mocha test/micromark_test.js",
     "prettier": "npx prettier --write ./{src,test}"
@@ -37,7 +37,10 @@
     "micromark": "^2.10.1",
     "mocha": "^10.4.0",
     "prettier": "^3.2.5",
+    "ts-loader": "^9.5.1",
     "tsx": "^4.10.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
