--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/mocharc",
 	"require": "tsx",
-  "spec": ["tests/**/*.test.ts"],
+  "spec": ["test/**/*.test.ts"],
   "reporter": "spec",
   "timeout": 60000
 }
