test: switch from assert to chai expect

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.6",
+    "chai": "^5.1.1",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mocha": "^10.4.3",
