feat: use micromark-util-symbol for codes

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "micromark-util-character": "^2.1.0",
+    "micromark-util-symbol": "^2.0.0",
     "micromark-util-types": "^2.0.0"
   }
 }
