--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   },
   "repository": "https://github.com/landakram/micromark-extension-wiki-link",
   "license": "MIT",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "build": "webpack",
     "lint": "npx eslint 'src/**/*.{ts,tsx,cjs,mjs,js,jsx}'",
-    "test": "npm run lint && mocha",
+    "test": "mocha",
     "prettier": "npx prettier --write ./{src,test}",
     "typecheck": "tsc --noEmit"
   },
